--- a/calculator_power.html
+++ b/calculator_power.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calcular Dimensionamento</title>
-        <link rel="icon" type="image/png" href="/Project/assets/logo.png">
-        <link rel="stylesheet" href="/Project/styles/style.css">
-        <link rel="stylesheet" href="/Project/styles/styleArruda.css">
-        <script src="/Project/utils/script_pages.js" defer></script>
-        <script src="/Project/utils/script_calculator_power.js" defer></script>
+        <link rel="icon" type="image/png" href="logo.png">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styleArruda.css">
+        <script src="script_pages.js" defer></script>
+        <script src="script_calculator_power.js" defer></script>
     </head>
     <body>
         <!-- Puxa o Header pelo JavaScript -->
