--- a/calculator_savings.html
+++ b/calculator_savings.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calcular Economia</title>
-        <link rel="icon" type="image/png" href="/Project/assets/logo.png">
-        <link rel="stylesheet" href="/Project/styles/style.css">
-        <script src="/Project/utils/script_pages.js" defer></script>
-        <script src="/Project/utils/script_calculator_savings.js" defer></script>
+        <link rel="icon" type="image/png" href="logo.png">
+        <link rel="stylesheet" href="style.css">
+        <script src="script_pages.js" defer></script>
+        <script src="script_calculator_savings.js" defer></script>
     </head>
     <body>
         <!-- Puxa o Header pelo JavaScript -->
@@ -79,7 +79,7 @@
 
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
-        <script src="/Project/utils/script_grafico.js"></script>
+        <script src="script_grafico.js"></script>
         <!-- Puxa o Footer pelo JavaScript -->
         <div id="footer-container"></div>
     </body>
