--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No Consume Facens</title>
-    <link rel="icon" type="image/png" href="/Project/images/logo.png">
-    <link rel="stylesheet" href="/Project/styles/style.css"> 
-    <script src="/Project/utils/script_pages.js" defer></script>
+    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="stylesheet" href="style.css"> 
+    <script src="script_pages.js" defer></script>
 </head>
 <body>
     <!-- Puxa o Header pelo JavaScript -->
